--- a/assets/sass/newStyles/_author-bio.scss
+++ b/assets/sass/newStyles/_author-bio.scss
@@ -84,6 +84,8 @@
                 font-family: 'geometriabold';
                 font-size: 40px;
                 text-transform: uppercase;
+                padding-left: 0;
+                line-height: 1;
                 @media (max-width: $large) {
                     font-size: 34px;
                 }
