--- a/assets/sass/newStyles/_author-bio.scss
+++ b/assets/sass/newStyles/_author-bio.scss
@@ -22,6 +22,7 @@
             display: inline-block;
             width: 250px;
             height: 250px;
+            border-radius: 50%;
             margin-bottom: 49px;
             @media (max-width: $large) {
                 width: 180px;
@@ -146,6 +147,11 @@
                         font-size: 14px;
                         line-height: 16px;
                     }
+                }
+
+                .personal-text {
+                    columns: 2;
+                    column-gap: 2em;
                 }
 
                 p {
