--- a/assets/sass/newStyles/_author-bio.scss
+++ b/assets/sass/newStyles/_author-bio.scss
@@ -72,7 +72,7 @@
 
     .personal {
         margin-bottom: 120px;
-        @media (max-width: $small) {
+        @media (max-width: $xsmall) {
             padding: 0 20px;
         }
 
